--- a/front-end/lovebuffet-vue/package.json
+++ b/front-end/lovebuffet-vue/package.json
@@ -8,7 +8,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.2.31"
+    "@vicons/fa": "^0.12.0",
+    "naive-ui": "^2.27.0",
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
