--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect": "^3.7.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3"
   }
 }
