--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.12.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "connect": "^3.7.0",
     "cors": "^2.8.5",
