--- a/front-end/lovebuffet-vue/package.json
+++ b/front-end/lovebuffet-vue/package.json
@@ -5,10 +5,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
     "@vicons/fa": "^0.12.0",
+    "json-server": "^0.17.0",
     "naive-ui": "^2.27.0",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14"
