--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "serve-static": "^1.15.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
